<resources>
    <string name="app_name">FoodRush</string>
    <string name="food_rush">FoodRush</string>
    <string name="app_logo_description">FoodRush app logo</string>
    <string name="choose_restaurant">Choose Restaurant</string>
    <string name="pizza_palace">Pizza Palace</string>
    <string name="burger_house">Burger House</string>
    <string name="sushi_bar">Sushi Bar</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="menu">Menu</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="enter_address">Enter your delivery address</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="minutes">min</string>
    <string name="cart">Cart</string>
    <string name="your_order">Your Order</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total">Total</string>
    <string name="remove">Remove</string>
    <string name="quantity">Quantity</string>
    <string name="profile">Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="addresses">Addresses</string>
    <string name="settings">Settings</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="krasnoyarsk_address">Красноярск, адрес доставки</string>
    <string name="weather_for_day">Погода на день</string>
    <string name="better_stay_home">Лучше остаться дома и заказать еду</string>
    <string name="find_restaurant_or_dish">Найти ресторан или блюдо</string>
    <string name="restaurants">Рестораны</string>
    <string name="mister_burger">Мистер Бургер</string>
    <string name="pizzamania">Пиццамания</string>
    <string name="sushimaster">Сушимастер</string>

    <string name="label_phone">Телефон</string>
    <string name="label_name">Имя</string>
    <string name="label_email">Email</string>
    <string name="label_gender">Пол</string>
    <string name="label_birthday">День рождения</string>
    <string name="value_phone">+7 (999) 999-99-99</string>
    <string name="value_name">Дмитрий</string>
    <string name="value_email">email@gmail.com</string>
    <string name="value_gender">мужской</string>
    <string name="value_birthday">01.01.2001</string>
    <string name="action_save">Сохранить</string>
    <string name="action_delete_profile">Удалить профиль</string>
    <string name="my_cart">Моя корзина</string>
    <string name="sum_order">Сумма заказа %s</string>
    <string name="delivery_price">Доставка %s</string>
    <string name="total_label">Итог</string>
    <string name="action_checkout">К оформлению</string>
    <string name="gumburger_name">Гамбургер</string>
    <string name="fishburger_name">Фиш Бургер</string>
    <string name="cheeseburger_name">Чизбургер</string>
    <string name="chickenburger_name">Чикенбургер</string>
    <string name="fries_name">Картофель фри</string>
    <string name="nuggets_name">Наггетсы</string>
    <string name="gumburger_desc">108 г, 248 ккал</string>
    <string name="fishburger_desc">168 г, 401 ккал</string>
    <string name="cheeseburger_desc">114 г, 340 ккал</string>
    <string name="chickenburger_desc">137 г, 380 ккал</string>
    <string name="fries_desc">100 г, 200 ккал</string>
    <string name="nuggets_desc">124 г, 360 ккал</string>
    <string name="hint_street">Street Address</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip Code</string>
    <string name="error_fill_fields">Please fill in all required fields</string>
    <string name="order_confirmed_msg">Order confirmed! Delivery address: %1$s, %2$s, %3$s %4$s</string>
</resources>